--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-handlebars": "^7.1.2",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongoose": "^7.4.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   }
 }
